--- a/src/bioregistry/app/templates/collection.html
+++ b/src/bioregistry/app/templates/collection.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <a class="btn btn-sm btn-outline-dark" style="margin-right: 0.5em"
-                       href="https://github.com/biopragmatics/bioregistry/issues/new?template=add-collection-prefix.yml&collection={{ entry.identifier}}&title=Add+prefix+X+to+collection+{{ entry.identifier}}">
+                       href="{{ config.METAREGISTRY_REPOSITORY }}/issues/new?template=add-collection-prefix.yml&collection={{ entry.identifier}}&title=Add+prefix+X+to+collection+{{ entry.identifier}}">
                         Suggest
                     </a>
                     </div>
