--- a/src/bioregistry/app/templates/collections.html
+++ b/src/bioregistry/app/templates/collections.html
@@ -39,16 +39,15 @@
             <p>New collections can be added in one of the following ways:</p>
             <ul>
                 <li>
-                    <a href="https://github.com/biopragmatics/bioregistry/issues/new?template=add-new-collection.md">
+                    <a href="{{ config.METAREGISTRY_REPOSITORY }}/issues/new?template=add-new-collection.md">
                         Make a suggestion</a> on GitHub.
                 </li>
                 <li>Edit the <a
-                        href="https://github.com/biopragmatics/bioregistry/edit/main/src/bioregistry/data/collections.json">collections.json</a>
+                        href="{{ config.METAREGISTRY_REPOSITORY }}/edit/main/src/bioregistry/data/collections.json">collections.json</a>
                     file with the GitHub editor.
                 </li>
                 <li>
-                    Make a pull request to <a href="https://github.com/biopragmatics/bioregistry">
-                    <i class="fab fa-github"></i> biopragmatics/bioregistry</a>.
+                    Make a <a href="{{ config.METAREGISTRY_REPOSITORY }}">pull request</a> directly.
                 </li>
             </ul>
         </div>
