--- a/src/bioregistry/app/templates/contexts.html
+++ b/src/bioregistry/app/templates/contexts.html
@@ -33,7 +33,7 @@
             </p>
             <p>
                 The proposal of new contexts and maintenance of existing contexts is governed by
-                <a href="https://github.com/biopragmatics/bioregistry/tree/main/exports/contexts#prescriptive-contexts">
+                <a href="{{ config.METAREGISTRY_REPOSITORY }}/tree/main/exports/contexts#prescriptive-contexts">
                     these rules and instructions</a>.
             </p>
         </div>
