--- a/src/bioregistry/app/templates/resolve_errors/disallowed_identifier.html
+++ b/src/bioregistry/app/templates/resolve_errors/disallowed_identifier.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Bioregistry Resolution Error{% endblock %}
+{% block title %}{{ config.METAREGISTRY_TITLE }} Resolution Error{% endblock %}
 
 {% block container %}
     <div class="card card-body">
