--- a/src/bioregistry/app/templates/resolve_errors/missing_providers.html
+++ b/src/bioregistry/app/templates/resolve_errors/missing_providers.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Bioregistry Resolution Error{% endblock %}
+{% block title %}{{ config.METAREGISTRY_TITLE }} Resolution Error{% endblock %}
 
 {% block container %}
     <div class="card card-body">
@@ -12,16 +12,16 @@
         </p>
         <ul>
             <li>
-                <a href="https://github.com/biopragmatics/bioregistry/issues/new?assignees=&labels=Provider%2C+New&template=add-provider-for-resource.md&title=Add+provider+for+%60{{ prefix }}%60">
+                <a href="{{ config.METAREGISTRY_REPOSITORY }}/issues/new?assignees=&labels=Provider%2C+New&template=add-provider-for-resource.md&title=Add+provider+for+%60{{ prefix }}%60">
                     Add an issue</a> on our GitHub issue tracker.
             </li>
             <li>
-                Add the provider yourself by <a href="https://github.com/biopragmatics/bioregistry/edit/main/src/bioregistry/data/bioregistry.json">
-                    editing the Bioregistry</a> in GitHub through the web browser.
+                Add the provider yourself by <a href="{{ config.METAREGISTRY_REPOSITORY }}/edit/main/src/bioregistry/data/bioregistry.json">
+                    editing the {{ config.METAREGISTRY_TITLE }}</a> in GitHub through the web browser.
             </li>
             <li>
-                Make a pull request to <a href="https://github.com/biopragmatics/bioregistry">
-                <i class="fab fa-github"></i> biopragmatics/bioregistry</a>.
+                Make a pull request to <a href="{{ config.METAREGISTRY_REPOSITORY }}">
+                <i class="fab fa-github"></i> {{ config.METAREGISTRY_REPOSITORY_SLUG }}</a>.
             </li>
         </ul>
     </div>
